Post Title	Comment Heading & Social Icon Alignment Vertical Middle Widget Recent Comment	Recnet comment widget broken on both desktop and mobile view. Basic Responsive Menu	In Mobile Menu : we couldn't recognize the parent and child menu. Parallax Slider	Design Proper In Responsive Post Slider	Design Proper In Responsive Sidebar Headings	Sidebar Title Spacing Decrease Custom Logo	Sticky Header Custom Logo & Menu Spacing Issue Fix Back To Top Arrow	Back To Top Arrow Overlapping Issue Fix Search	Header Style 1 Search Alignment Proper In Responsive Header Style 2 Search Alignment Proper In Responsive All Heading Size	Font-Size Decrease In Responsive 3 Column Blog	When Blog 3 Column Comment & Read More Button Design Fix Post Box	Read More Button & Comment Vertical Align Fix bbPress	Notify Email Checkbox & Button Alignment Fix Header Style 2	Top Header Social Icon Alignmene Fix

--- a/assets/sass/_blog.scss
+++ b/assets/sass/_blog.scss
@@ -127,14 +127,31 @@
                             margin-left: -25px;
                             top: -25px;
                             background: #444;
-                            @include border-radius(50%);
+                            @include border-radius(100%);
+                            text-align: center;
                             width: 50px;
                             height: 50px;
-                            text-align: center;
                             line-height: 50px;
                         }
                     }
                 }
+            }
+            #primary.col-md-8{
+               .post.col-md-4{
+                    .entry-content {
+                        .thumbnail-post{
+                            .icon{
+                                &::after{
+                                    width: 40px;
+                                    height: 40px;
+                                    line-height: 40px;
+                                    top: 50%;
+                                    @include transform(translateY(-50%));
+                                }
+                            }
+                        }
+                    }
+                } 
             }
 
 
@@ -258,6 +275,8 @@
             float: left;
             margin-right: 12px;
             letter-spacing: 0;
+            margin-top: 0;
+            padding-top: 0;
         }
 
         .pings-title {
@@ -285,11 +304,21 @@
             position: relative;
             top: 10px;
         }
-
+        #primary{
+            .post.col-md-4{
+                .comment-count{
+                    display: inline-block;
+                    float: none;
+                    margin-top: 10px;
+                    width: 100%;
+                }
+            }     
+        }
         .comment-count {
             float: right;
             font-weight: normal;
             padding: 0px 5px 0px 0px;
+            margin-top: 10px;
             &::before{
                 font-family: "IcoMoon";
                 content: '\e913';
@@ -422,7 +451,7 @@
             width: 19px;
             height: 19px;
             position: relative;
-            top: 14px;
+            top: 4px;
             color: #bbb;
             &:hover{
                 background-position: 0 -19px;    
@@ -1007,6 +1036,20 @@
             body #header.sticky-header{
                 margin-left: auto !important;
             }
+            #header.sticky-header > .container{
+                display: flex;
+                align-items: center;
+                display: -webkit-flex;
+                -webkit-align-items: center;
+                width: 100%;
+            }
+            .sticky-header #sticky-logo{
+                margin: 0!important;
+            }
+            .header > .container,
+            .new-top-menu > .container{
+                width: 100%;
+            }
         }
 
 
@@ -1015,6 +1058,59 @@
             .single-page-navigation .nav-next{
                 text-align: center;
             }
+
+            #slide_holder {
+                .featured-thumbnail{
+                    margin-right: 0;
+                    position: absolute;
+                    right: 0;
+                    left: auto;
+                    text-align: right;
+                    max-width: 100%;
+                    width: 100%;
+                    &::before{
+                        background-color: rgba(0, 0, 0, 0.5);
+                        content: "";
+                        display: inline-block;
+                        height: 100%;
+                        position: absolute;
+                        width: 100%; 
+                    }
+                    img{
+                        width: 100%;
+                        border: none;
+                    }
+                }
+                .post-more{
+                    bottom: 20px;
+                    left: 15px;
+                    margin: 0;
+                }
+            }
+            #slide_holder p,
+            #slide_holder .featured-title {
+                float: none;
+                left: 0;
+                width: 100%;
+                padding: 0 15px;
+            }
+
+            .widget-title{
+                margin: 0;
+                padding: 0;
+            }
         }
 
 
+        @media screen and (max-width: 540px) {
+            #slide_holder .featured-thumbnail img,
+            #slide_holder .featured-thumbnail{
+                height: 100%;
+            }
+            .slide-container{
+                height: 320px;
+            }
+            #slide_holder{
+                min-height: 320px;   
+            }
+        }
