--- a/css/bbpress.css
+++ b/css/bbpress.css
@@ -1641,7 +1641,7 @@ li.bbp-topic-freshness {}
 .bbp-topic-form fieldset .notify,
 .bbp-reply-form fieldset .notify {
     float: right;
-    margin-top: 18px;
+    margin-top: 28px;
 }
 
 div.bbp-submit-wrapper {
